Jun RK Overflow issue for body tag

--- a/ui.frontend/src/main/webpack/wpi-afa/components/wpi-alert/scss/styles/afa-wpi.scss
+++ b/ui.frontend/src/main/webpack/wpi-afa/components/wpi-alert/scss/styles/afa-wpi.scss
@@ -60,6 +60,7 @@ section.afa-wpi-theme {
     }
 }
 
-body.xf-web-container {
+body.xf-web-container, body {
     margin: 0;
+    overflow: hidden;
 }
