--- a/ui.frontend/src/main/webpack/wpi-alight/components/wpi-alert/scss/styles/alight-wpi.scss
+++ b/ui.frontend/src/main/webpack/wpi-alight/components/wpi-alert/scss/styles/alight-wpi.scss
@@ -109,6 +109,7 @@ section.alight-wpi-theme {
 
 }
 
-body.xf-web-container {
+body.xf-web-container, body {
     margin: 0;
+    overflow: hidden;
 }
