--- a/ui.frontend/src/main/webpack/wpi-fidelity/components/wpi-alert/scss/styles/fidelity-wpi.scss
+++ b/ui.frontend/src/main/webpack/wpi-fidelity/components/wpi-alert/scss/styles/fidelity-wpi.scss
@@ -1,4 +1,3 @@
-
 .fidelity-wpi-theme {
     padding: 24px;
     border: 1px solid #cccccc;
@@ -135,6 +134,7 @@
     }
 }
 
-body.xf-web-container {
+body.xf-web-container, body {
     margin: 0;
+    overflow: hidden;
 }
