--- a/ui.frontend/src/main/webpack/wpi-mellon/components/wpi-alert/scss/styles/mellon-wpi.scss
+++ b/ui.frontend/src/main/webpack/wpi-mellon/components/wpi-alert/scss/styles/mellon-wpi.scss
@@ -83,6 +83,7 @@ section.mellon-wpi-theme {
     }
 }
 
-body.xf-web-container {
+body.xf-web-container, body {
     margin: 0;
+    overflow: hidden;
 }
