--- a/ui.frontend/src/main/webpack/wpi-principal/components/wpi-alert/scss/styles/principal-wpi.scss
+++ b/ui.frontend/src/main/webpack/wpi-principal/components/wpi-alert/scss/styles/principal-wpi.scss
@@ -137,6 +137,7 @@
 
 }
 
-body.xf-web-container {
+body.xf-web-container, body {
     margin: 0;
+    overflow: hidden;
 }
