--- a/ui.frontend/src/main/webpack/wpi-transamerica/components/wpi-alert/scss/styles/transamerica-wpi.scss
+++ b/ui.frontend/src/main/webpack/wpi-transamerica/components/wpi-alert/scss/styles/transamerica-wpi.scss
@@ -118,6 +118,7 @@ section.transamerica-wpi-theme {
 
 }
 
-body.xf-web-container {
+body.xf-web-container, body {
     margin: 0;
+    overflow: hidden;
 }
