--- a/ui.frontend/src/main/webpack/wpi-vanguard/components/wpi-alert/scss/styles/vanguard.scss
+++ b/ui.frontend/src/main/webpack/wpi-vanguard/components/wpi-alert/scss/styles/vanguard.scss
@@ -221,6 +221,7 @@ section.vanguard-wpi-theme {
     }
 }
 
-body.xf-web-container {
+body.xf-web-container, body {
     margin: 0;
+    overflow: hidden;
 }
