--- a/ui.frontend/src/main/webpack/wpi-voya/components/wpi-alert/scss/styles/voya.scss
+++ b/ui.frontend/src/main/webpack/wpi-voya/components/wpi-alert/scss/styles/voya.scss
@@ -73,6 +73,7 @@ section.voya-wpi-theme {
     }
 }
 
-body.xf-web-container {
+body.xf-web-container, body {
     margin: 0;
+    overflow: hidden;
 }
